[gd_scene load_steps=3 format=3 uid="uid://biqld1585023v"]

[ext_resource type="Script" path="res://Scripts/UI/start_menu.gd" id="1_menu"]
[ext_resource type="PackedScene" uid="uid://dm7xvmwbyolcb" path="res://Scene/main_scene.tscn" id="2_main"]

[node name="StartMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1_menu")
main_scene = ExtResource("2_main")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.1, 0.15, 0.3, 1)

[node name="StarField" type="Control" parent="Background"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -300.0
offset_right = 400.0
offset_bottom = 300.0
alignment = 1

[node name="Title" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "BLASTEROIDS"
horizontal_alignment = 1
autowrap_mode = 3

[node name="Subtitle" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "–ö–æ—Å–º–∏—á–µ—Å–∫–∏–µ –ø—Ä–∏–∫–ª—é—á–µ–Ω–∏—è —Å –∫—Ä—é–∫-–∫–æ—à–∫–æ–π"
horizontal_alignment = 1
autowrap_mode = 3

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="ButtonContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="StartButton" type="Button" parent="VBoxContainer/ButtonContainer"]
layout_mode = 2
text = "–ù–ê–ß–ê–¢–¨ –ò–ì–†–£"

[node name="TutorialButton" type="Button" parent="VBoxContainer/ButtonContainer"]
layout_mode = 2
text = "–¢–£–¢–û–†–ò–ê–õ"

[node name="ExitButton" type="Button" parent="VBoxContainer/ButtonContainer"]
layout_mode = 2
text = "–í–´–•–û–î"

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="QuickTutorial" type="ScrollContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="TutorialText" type="RichTextLabel" parent="VBoxContainer/QuickTutorial"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
bbcode_enabled = true
text = "[center][color=gold][b]–ö–†–ê–¢–ö–ò–ô –¢–£–¢–û–†–ò–ê–õ[/b][/color][/center]

[color=lightblue][b]üöÄ –£–ü–†–ê–í–õ–ï–ù–ò–ï –ò–ì–†–û–ö–û–ú:[/b][/color]
‚Ä¢ [color=yellow]WASD[/color] - –î–≤–∏–∂–µ–Ω–∏–µ –∫–æ—Ä–∞–±–ª—è
‚Ä¢ [color=yellow]–õ–µ–≤–∞—è –∫–Ω–æ–ø–∫–∞ –º—ã—à–∏[/color] - –°—Ç—Ä–µ–ª—å–±–∞ –ª–∞–∑–µ—Ä–∞–º–∏
‚Ä¢ [color=yellow]–ü—Ä–æ–±–µ–ª + WASD[/color] - –ë—ã—Å—Ç—Ä—ã–π –¥–æ–¥–∂ (—Ç—Ä–∞—Ç–∏—Ç —Ç–æ–ø–ª–∏–≤–æ)

[color=lightgreen][b]ü™ù –ö–†–Æ–ö-–ö–û–®–ö–ê:[/b][/color]
‚Ä¢ [color=yellow]–ü—Ä–∞–≤–∞—è –∫–Ω–æ–ø–∫–∞ –º—ã—à–∏[/color] - –ó–∞–ø—É—Å–∫/–æ—Ç–∑—ã–≤ –∫—Ä—é–∫–∞
‚Ä¢ [color=yellow]Escape[/color] - –ü—Ä–∏–Ω—É–¥–∏—Ç–µ–ª—å–Ω—ã–π –≤–æ–∑–≤—Ä–∞—Ç –∫—Ä—é–∫–∞
‚Ä¢ –¶–µ–ø–ª—è–π—Ç–µ—Å—å –∑–∞ –∞—Å—Ç–µ—Ä–æ–∏–¥—ã –∏ –≤—Ä–∞–∂–µ—Å–∫–∏–µ –∫–æ—Ä–∞–±–ª–∏
‚Ä¢ –ö—Ä—é–∫ –∞–≤—Ç–æ–º–∞—Ç–∏—á–µ—Å–∫–∏ –≤–æ–∑–≤—Ä–∞—â–∞–µ—Ç—Å—è –ø—Ä–∏ —É–Ω–∏—á—Ç–æ–∂–µ–Ω–∏–∏ —Ü–µ–ª–∏

[color=orange][b]‚õΩ –°–ò–°–¢–ï–ú–ê –¢–û–ü–õ–ò–í–ê:[/b][/color]
‚Ä¢ –¢–æ–ø–ª–∏–≤–æ —Ç—Ä–∞—Ç–∏—Ç—Å—è –ø—Ä–∏ –¥–≤–∏–∂–µ–Ω–∏–∏ –∏ –¥–æ–¥–∂–µ
‚Ä¢ –í–æ—Å—Å—Ç–∞–Ω–∞–≤–ª–∏–≤–∞–µ—Ç—Å—è –≤ –ø–æ–∫–æ–µ
‚Ä¢ –ü—Ä–∏ –Ω–µ—Ö–≤–∞—Ç–∫–µ —Ç–æ–ø–ª–∏–≤–∞ —Å–∫–æ—Ä–æ—Å—Ç—å —Å–Ω–∏–∂–∞–µ—Ç—Å—è
‚Ä¢ [color=cyan]–°–∏–Ω–∏–µ –∞—Å—Ç–µ—Ä–æ–∏–¥—ã[/color] —Å–æ–¥–µ—Ä–∂–∞—Ç —Ç–æ–ø–ª–∏–≤–æ

[color=lightcoral][b]ü™® –¢–û–ü–õ–ò–í–ù–´–ï –ê–°–¢–ï–†–û–ò–î–´:[/b][/color]
‚Ä¢ –ó–∞—Ü–µ–ø–∏—Ç–µ—Å—å –∫—Ä—é–∫–æ–º –∑–∞ [color=cyan]—Å–∏–Ω–∏–π –∞—Å—Ç–µ—Ä–æ–∏–¥[/color]
‚Ä¢ –ü–æ–¥–ø–ª—ã–≤–∏—Ç–µ –∫ –Ω–µ–º—É –∏ \"—Å–∞–¥–∏—Ç–µ—Å—å\" –Ω–∞ –Ω–µ–≥–æ
‚Ä¢ –¢–æ–ø–ª–∏–≤–æ –∞–≤—Ç–æ–º–∞—Ç–∏—á–µ—Å–∫–∏ –ø–µ—Ä–µ–¥–∞–µ—Ç—Å—è –∏–≥—Ä–æ–∫—É
‚Ä¢ –ü—Ä–æ–≥—Ä–µ—Å—Å –±–∞—Ä –ø–æ–∫–∞–∑—ã–≤–∞–µ—Ç –æ—Å—Ç–∞–≤—à–µ–µ—Å—è —Ç–æ–ø–ª–∏–≤–æ

[color=yellow][b]‚öîÔ∏è –í–†–ê–ì–ò –ò –õ–£–¢–ò–ù–ì:[/b][/color]
‚Ä¢ –£–Ω–∏—á—Ç–æ–∂–∞–π—Ç–µ –≤—Ä–∞–∂–µ—Å–∫–∏–µ –∫–æ—Ä–∞–±–ª–∏ –ª–∞–∑–µ—Ä–∞–º–∏
‚Ä¢ –û–±–ª–æ–º–∫–∏ –∫–æ—Ä–∞–±–ª–µ–π –º–æ–∂–Ω–æ —Ä–∞–∑–≥—Ä–∞–±–∏—Ç—å –¥–ª—è –ø–æ–ª—É—á–µ–Ω–∏—è —Ç–æ–ø–ª–∏–≤–∞
‚Ä¢ –û—Å—Ç–æ—Ä–æ–∂–Ω–æ: –∫–æ—Ä–∞–±–ª–∏ –º–æ–≥—É—Ç —Å—Ç—Ä–µ–ª—è—Ç—å –ø–æ—Å–ª–µ —É–Ω–∏—á—Ç–æ–∂–µ–Ω–∏—è!

[color=lightgreen][b]üí° –°–û–í–ï–¢–´:[/b][/color]
‚Ä¢ –ò—Å–ø–æ–ª—å–∑—É–π—Ç–µ –∫—Ä—é–∫ –¥–ª—è –±—ã—Å—Ç—Ä–æ–≥–æ –ø–µ—Ä–µ–º–µ—â–µ–Ω–∏—è
‚Ä¢ –≠–∫–æ–Ω–æ–º—å—Ç–µ —Ç–æ–ø–ª–∏–≤–æ - –¥–≤–∏–≥–∞–π—Ç–µ—Å—å —Å —É–º–æ–º
‚Ä¢ –ò—â–∏—Ç–µ —Ç–æ–ø–ª–∏–≤–Ω—ã–µ –∞—Å—Ç–µ—Ä–æ–∏–¥—ã –∫–æ–≥–¥–∞ —Ç–æ–ø–ª–∏–≤–æ –∑–∞–∫–∞–Ω—á–∏–≤–∞–µ—Ç—Å—è
‚Ä¢ –î–µ—Ä–∂–∏—Ç–µ—Å—å –ø–æ–¥–∞–ª—å—à–µ –æ—Ç —Å–≤–µ–∂–∏—Ö –æ–±–ª–æ–º–∫–æ–≤ –∫–æ—Ä–∞–±–ª–µ–π"
autowrap_mode = 3
scroll_active = false

[node name="TutorialPanel" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
modulate = Color(1, 1, 1, 0.95)

[node name="TutorialContainer" type="VBoxContainer" parent="TutorialPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -500.0
offset_top = -350.0
offset_right = 500.0
offset_bottom = 350.0

[node name="TutorialTitle" type="Label" parent="TutorialPanel/TutorialContainer"]
layout_mode = 2
text = "–ü–û–î–†–û–ë–ù–´–ô –¢–£–¢–û–†–ò–ê–õ"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="TutorialPanel/TutorialContainer"]
layout_mode = 2

[node name="TutorialScrollContainer" type="ScrollContainer" parent="TutorialPanel/TutorialContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="DetailedTutorialText" type="RichTextLabel" parent="TutorialPanel/TutorialContainer/TutorialScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
bbcode_enabled = true
text = "[center][color=gold][b]–ü–û–õ–ù–û–ï –†–£–ö–û–í–û–î–°–¢–í–û –ü–û –ò–ì–†–ï[/b][/color][/center]

[color=lightblue][b]üöÄ –ë–ê–ó–û–í–û–ï –£–ü–†–ê–í–õ–ï–ù–ò–ï:[/b][/color]

[color=yellow]–î–≤–∏–∂–µ–Ω–∏–µ:[/color]
‚Ä¢ [b]W[/b] - –î–≤–∏–∂–µ–Ω–∏–µ –≤–ø–µ—Ä–µ–¥
‚Ä¢ [b]A[/b] - –ü–æ–≤–æ—Ä–æ—Ç –≤–ª–µ–≤–æ 
‚Ä¢ [b]S[/b] - –î–≤–∏–∂–µ–Ω–∏–µ –Ω–∞–∑–∞–¥
‚Ä¢ [b]D[/b] - –ü–æ–≤–æ—Ä–æ—Ç –≤–ø—Ä–∞–≤–æ
‚Ä¢ –ö–æ—Ä–∞–±–ª—å –ø–æ–≤–æ—Ä–∞—á–∏–≤–∞–µ—Ç—Å—è –ø–æ –Ω–∞–ø—Ä–∞–≤–ª–µ–Ω–∏—é –¥–≤–∏–∂–µ–Ω–∏—è

[color=yellow]–°—Ç—Ä–µ–ª—å–±–∞:[/color]
‚Ä¢ [b]–õ–µ–≤–∞—è –∫–Ω–æ–ø–∫–∞ –º—ã—à–∏[/color] - –í—ã—Å—Ç—Ä–µ–ª –ª–∞–∑–µ—Ä–æ–º –≤ –Ω–∞–ø—Ä–∞–≤–ª–µ–Ω–∏–∏ –∫—É—Ä—Å–æ—Ä–∞
‚Ä¢ –£ —Å—Ç—Ä–µ–ª—å–±—ã –µ—Å—Ç—å –ø–µ—Ä–µ–∑–∞—Ä—è–¥–∫–∞
‚Ä¢ –õ–∞–∑–µ—Ä—ã –Ω–∞–Ω–æ—Å—è—Ç —É—Ä–æ–Ω –≤—Ä–∞–≥–∞–º –∏ —Ä–∞–∑—Ä—É—à–∞—é—Ç –∞—Å—Ç–µ—Ä–æ–∏–¥—ã

[color=yellow]–î–æ–¥–∂:[/color]
‚Ä¢ [b]–ü—Ä–æ–±–µ–ª + WASD[/b] - –ë—ã—Å—Ç—Ä—ã–π —Ä—ã–≤–æ–∫ –≤ –Ω–∞–ø—Ä–∞–≤–ª–µ–Ω–∏–∏ –∫–ª–∞–≤–∏—à
‚Ä¢ –¢—Ä–∞—Ç–∏—Ç [color=orange]15 –µ–¥–∏–Ω–∏—Ü —Ç–æ–ø–ª–∏–≤–∞[/color]
‚Ä¢ –ò–º–µ–µ—Ç –ø–µ—Ä–µ–∑–∞—Ä—è–¥–∫—É 1 —Å–µ–∫—É–Ω–¥–∞
‚Ä¢ –ü–æ–º–æ–≥–∞–µ—Ç —É–≤–æ—Ä–∞—á–∏–≤–∞—Ç—å—Å—è –æ—Ç –∞—Ç–∞–∫

[color=lightgreen][b]ü™ù –°–ò–°–¢–ï–ú–ê –ö–†–Æ–ö-–ö–û–®–ö–ò:[/b][/color]

[color=yellow]–û—Å–Ω–æ–≤—ã:[/color]
‚Ä¢ [b]–ü—Ä–∞–≤–∞—è –∫–Ω–æ–ø–∫–∞ –º—ã—à–∏[/b] - –ó–∞–ø—É—Å–∫ –∫—Ä—é–∫–∞ –≤ –Ω–∞–ø—Ä–∞–≤–ª–µ–Ω–∏–∏ –∫—É—Ä—Å–æ—Ä–∞
‚Ä¢ [b]Escape[/b] - –ü—Ä–∏–Ω—É–¥–∏—Ç–µ–ª—å–Ω—ã–π –æ—Ç–∑—ã–≤ –∫—Ä—é–∫–∞
‚Ä¢ –ú–∞–∫—Å–∏–º–∞–ª—å–Ω–∞—è –¥–∞–ª—å–Ω–æ—Å—Ç—å: 600 –ø–∏–∫—Å–µ–ª–µ–π
‚Ä¢ –°–∫–æ—Ä–æ—Å—Ç—å –ø–æ–ª–µ—Ç–∞: 1200 –µ–¥–∏–Ω–∏—Ü/—Å–µ–∫

[color=yellow]–ó–∞—Ü–µ–ø–ª–µ–Ω–∏–µ:[/color]
‚Ä¢ –ö—Ä—é–∫ –º–æ–∂–µ—Ç —Ü–µ–ø–ª—è—Ç—å—Å—è –∑–∞ –ª—é–±—ã–µ —Ç–≤–µ—Ä–¥—ã–µ –æ–±—ä–µ–∫—Ç—ã
‚Ä¢ [color=cyan]–ê—Å—Ç–µ—Ä–æ–∏–¥—ã[/color] - —Å—Ç–∞—Ç–∏—á–Ω—ã–µ —Ü–µ–ª–∏
‚Ä¢ [color=orange]–í—Ä–∞–∂–µ—Å–∫–∏–µ –∫–æ—Ä–∞–±–ª–∏[/color] - –¥–≤–∏–∂—É—â–∏–µ—Å—è —Ü–µ–ª–∏
‚Ä¢ –ü—Ä–∏ –∑–∞—Ü–µ–ø–ª–µ–Ω–∏–∏ –æ–±—ä–µ–∫—Ç—ã —Å–≤–µ—Ç—è—Ç—Å—è

[color=yellow]–ê–≤—Ç–æ–º–∞—Ç–∏—á–µ—Å–∫–∏–π –≤–æ–∑–≤—Ä–∞—Ç:[/color]
‚Ä¢ –ü—Ä–∏ –¥–æ—Å—Ç–∏–∂–µ–Ω–∏–∏ –º–∞–∫—Å–∏–º–∞–ª—å–Ω–æ–π –¥–∞–ª—å–Ω–æ—Å—Ç–∏
‚Ä¢ –ü—Ä–∏ —É–Ω–∏—á—Ç–æ–∂–µ–Ω–∏–∏ –ø—Ä–∏–∫—Ä–µ–ø–ª–µ–Ω–Ω–æ–≥–æ –æ–±—ä–µ–∫—Ç–∞
‚Ä¢ –ü—Ä–∏ —Å–ª–∏—à–∫–æ–º –±–ª–∏–∑–∫–æ–º —Ä–∞—Å—Å—Ç–æ—è–Ω–∏–∏ –∫ –¥–≤–∏–∂—É—â–µ–π—Å—è —Ü–µ–ª–∏
‚Ä¢ –ü—Ä–∏ —É–¥–∞–ª–µ–Ω–∏–∏ –æ–±—ä–µ–∫—Ç–∞ –∏–∑ –∏–≥—Ä—ã

[color=orange][b]‚õΩ –ü–û–î–†–û–ë–ù–û –û –¢–û–ü–õ–ò–í–ï:[/b][/color]

[color=yellow]–†–∞—Å—Ö–æ–¥ —Ç–æ–ø–ª–∏–≤–∞:[/color]
‚Ä¢ [color=red]20 –µ–¥–∏–Ω–∏—Ü/—Å–µ–∫[/color] –ø—Ä–∏ –¥–≤–∏–∂–µ–Ω–∏–∏ (WASD)
‚Ä¢ [color=red]15 –µ–¥–∏–Ω–∏—Ü[/color] –∑–∞ –æ–¥–∏–Ω –¥–æ–¥–∂
‚Ä¢ [color=green]+10 –µ–¥–∏–Ω–∏—Ü/—Å–µ–∫[/color] –≤–æ—Å—Å—Ç–∞–Ω–æ–≤–ª–µ–Ω–∏–µ –≤ –ø–æ–∫–æ–µ

[color=yellow]–≠—Ñ—Ñ–µ–∫—Ç—ã –Ω–µ—Ö–≤–∞—Ç–∫–∏ —Ç–æ–ø–ª–∏–≤–∞:[/color]
‚Ä¢ –ü—Ä–∏ [color=red]0 —Ç–æ–ø–ª–∏–≤–∞[/color] —Å–∫–æ—Ä–æ—Å—Ç—å —Å–Ω–∏–∂–∞–µ—Ç—Å—è –¥–æ 30%
‚Ä¢ –î–æ–¥–∂ —Å—Ç–∞–Ω–æ–≤–∏—Ç—Å—è –Ω–µ–¥–æ—Å—Ç—É–ø–µ–Ω
‚Ä¢ –ö—Ä–∞—Å–Ω–∞—è –∏–Ω–¥–∏–∫–∞—Ü–∏—è –≤ –∏–Ω—Ç–µ—Ä—Ñ–µ–π—Å–µ

[color=yellow]–ú–∞–∫—Å–∏–º—É–º —Ç–æ–ø–ª–∏–≤–∞:[/color] 100 –µ–¥–∏–Ω–∏—Ü

[color=lightcoral][b]ü™® –¢–û–ü–õ–ò–í–ù–´–ï –ê–°–¢–ï–†–û–ò–î–´:[/b][/color]

[color=yellow]–ö–∞–∫ —Ä–∞—Å–ø–æ–∑–Ω–∞—Ç—å:[/color]
‚Ä¢ [color=cyan]–°–∏–Ω–∏–π —Ü–≤–µ—Ç[/color] –≤–º–µ—Å—Ç–æ —Å–µ—Ä–æ–≥–æ
‚Ä¢ –í–∏–¥–∏–º—ã–π –ø—Ä–æ–≥—Ä–µ—Å—Å –±–∞—Ä —Ç–æ–ø–ª–∏–≤–∞
‚Ä¢ –ü–æ—è–≤–ª—è—é—Ç—Å—è —Å —à–∞–Ω—Å–æ–º 40%

[color=yellow]–ö–∞–∫ –¥–æ–±—ã–≤–∞—Ç—å —Ç–æ–ø–ª–∏–≤–æ:[/color]
1. –ó–∞–ø—É—Å—Ç–∏—Ç–µ –∫—Ä—é–∫ –≤ —Ç–æ–ø–ª–∏–≤–Ω—ã–π –∞—Å—Ç–µ—Ä–æ–∏–¥
2. –ü–æ–¥–ª–µ—Ç–∏—Ç–µ –∫ –∞—Å—Ç–µ—Ä–æ–∏–¥—É
3. \"–°–∞–¥–∏—Ç–µ—Å—å\" –Ω–∞ –Ω–µ–≥–æ (–ø—Ä–æ—Å—Ç–æ –∫–æ—Å–Ω–∏—Ç–µ—Å—å)
4. –¢–æ–ø–ª–∏–≤–æ –ø–µ—Ä–µ–¥–∞–µ—Ç—Å—è –∞–≤—Ç–æ–º–∞—Ç–∏—á–µ—Å–∫–∏ —Å–æ —Å–∫–æ—Ä–æ—Å—Ç—å—é [color=green]20 –µ–¥/—Å–µ–∫[/color]
5. –ü—Ä–æ–≥—Ä–µ—Å—Å –±–∞—Ä –ø–æ–∫–∞–∑—ã–≤–∞–µ—Ç –æ—Å—Ç–∞—Ç–æ–∫

[color=yellow]–ü–æ—Å–ª–µ –∏—Å—á–µ—Ä–ø–∞–Ω–∏—è:[/color]
‚Ä¢ –ê—Å—Ç–µ—Ä–æ–∏–¥ —Å—Ç–∞–Ω–æ–≤–∏—Ç—Å—è –æ–±—ã—á–Ω—ã–º —Å–µ—Ä—ã–º
‚Ä¢ –ü—Ä–æ–≥—Ä–µ—Å—Å –±–∞—Ä –∏—Å—á–µ–∑–∞–µ—Ç
‚Ä¢ –ú–æ–∂–Ω–æ —Ä–∞–∑—Ä—É—à–∏—Ç—å –∫–∞–∫ –æ–±—ã—á–Ω—ã–π –∞—Å—Ç–µ—Ä–æ–∏–¥

[color=yellow][b]‚öîÔ∏è –í–†–ê–ì–ò –ò –ë–û–ï–í–ê–Ø –°–ò–°–¢–ï–ú–ê:[/b][/color]

[color=yellow]–¢–∏–ø—ã –≤—Ä–∞–≥–æ–≤:[/color]
‚Ä¢ [color=orange]–û—Ä–∞–Ω–∂–µ–≤—ã–µ –∫–æ—Ä–∞–±–ª–∏[/color] - –±–∞–∑–æ–≤—ã–µ –≤—Ä–∞–≥–∏
‚Ä¢ –ò–º–µ—é—Ç 30 –µ–¥–∏–Ω–∏—Ü –∑–¥–æ—Ä–æ–≤—å—è
‚Ä¢ –°—Ç—Ä–µ–ª—è—é—Ç –æ—Ä–∞–Ω–∂–µ–≤—ã–º–∏ –ª–∞–∑–µ—Ä–∞–º–∏
‚Ä¢ –ò–º–µ—é—Ç –ø—Ä–æ—Å—Ç–æ–π –ò–ò –ø—Ä–µ—Å–ª–µ–¥–æ–≤–∞–Ω–∏—è

[color=yellow]–ü–æ–≤–µ–¥–µ–Ω–∏–µ –≤—Ä–∞–≥–æ–≤:[/color]
‚Ä¢ [b]–û—Ä–±–∏—Ç–∞–ª—å–Ω–æ–µ –¥–≤–∏–∂–µ–Ω–∏–µ[/b] –≤–æ–∫—Ä—É–≥ —Ç–æ—á–∫–∏
‚Ä¢ [b]–ü—Ä–µ—Å–ª–µ–¥–æ–≤–∞–Ω–∏–µ[/b] –ø—Ä–∏ –æ–±–Ω–∞—Ä—É–∂–µ–Ω–∏–∏ –∏–≥—Ä–æ–∫–∞
‚Ä¢ [b]–ê—Ç–∞–∫–∞[/b] –ª–∞–∑–µ—Ä–∞–º–∏ –ø–æ –∏–≥—Ä–æ–∫—É
‚Ä¢ [b]–ë–µ–≥—Å—Ç–≤–æ[/b] –ø—Ä–∏ –±–ª–∏–∑–∫–æ–º –∫–æ–Ω—Ç–∞–∫—Ç–µ

[color=yellow]–û–±–ª–æ–º–∫–∏ –∏ –ª—É—Ç–∏–Ω–≥:[/color]
‚Ä¢ –£–Ω–∏—á—Ç–æ–∂–µ–Ω–Ω—ã–µ –∫–æ—Ä–∞–±–ª–∏ –æ—Å—Ç–∞–≤–ª—è—é—Ç [color=gray]–æ–±–ª–æ–º–∫–∏[/color]
‚Ä¢ –û–±–ª–æ–º–∫–∏ –º–æ–∂–Ω–æ —Ä–∞–∑–≥—Ä–∞–±–∏—Ç—å –¥–ª—è –ø–æ–ª—É—á–µ–Ω–∏—è [color=orange]5-30 —Ç–æ–ø–ª–∏–≤–∞[/color]
‚Ä¢ –ü–æ–¥–ª–µ—Ç–∏—Ç–µ –∫ –æ–±–ª–æ–º–∫–∞–º –∏ –∫–æ—Å–Ω–∏—Ç–µ—Å—å –∏—Ö
‚Ä¢ [color=red]–í–ù–ò–ú–ê–ù–ò–ï:[/color] –ö–æ—Ä–∞–±–ª–∏ –º–æ–≥—É—Ç –≤—ã—Å—Ç—Ä–µ–ª–∏—Ç—å –ø–æ—Å–ª–µ —É–Ω–∏—á—Ç–æ–∂–µ–Ω–∏—è!

[color=red][b]‚ö†Ô∏è –û–ü–ê–°–ù–û–°–¢–ò:[/b][/color]

[color=yellow]–í—Ä–∞–∂–µ—Å–∫–∏–µ –ª–∞–∑–µ—Ä—ã:[/color]
‚Ä¢ –ù–∞–Ω–æ—Å—è—Ç —É—Ä–æ–Ω –∏–≥—Ä–æ–∫—É
‚Ä¢ –û—Ä–∞–Ω–∂–µ–≤–æ–≥–æ —Ü–≤–µ—Ç–∞
‚Ä¢ –õ–µ—Ç—è—Ç –±—ã—Å—Ç—Ä–æ –∏ —Ç–æ—á–Ω–æ

[color=yellow]–ü–æ—Å–º–µ—Ä—Ç–Ω—ã–µ –≤—ã—Å—Ç—Ä–µ–ª—ã:[/color]
‚Ä¢ –ù–µ–∫–æ—Ç–æ—Ä—ã–µ –∫–æ—Ä–∞–±–ª–∏ —Å—Ç—Ä–µ–ª—è—é—Ç –ø–æ—Å–ª–µ —É–Ω–∏—á—Ç–æ–∂–µ–Ω–∏—è
‚Ä¢ [color=darkred]–¢–µ–º–Ω–æ-–∫—Ä–∞—Å–Ω—ã–µ –ª–∞–∑–µ—Ä—ã[/color]
‚Ä¢ –î–µ—Ä–∂–∏—Ç–µ—Å—å –ø–æ–¥–∞–ª—å—à–µ –æ—Ç —Å–≤–µ–∂–∏—Ö –æ–±–ª–æ–º–∫–æ–≤

[color=yellow]–°—Ç–æ–ª–∫–Ω–æ–≤–µ–Ω–∏—è:[/color]
‚Ä¢ –ü—Ä—è–º—ã–µ —Å—Ç–æ–ª–∫–Ω–æ–≤–µ–Ω–∏—è —Å –≤—Ä–∞–≥–∞–º–∏ –æ–ø–∞—Å–Ω—ã
‚Ä¢ –ò—Å–ø–æ–ª—å–∑—É–π—Ç–µ –¥–æ–¥–∂ –¥–ª—è —É–∫–ª–æ–Ω–µ–Ω–∏—è
‚Ä¢ –ö—Ä—é–∫ –ø–æ–º–æ–∂–µ—Ç –±—ã—Å—Ç—Ä–æ –∏–∑–º–µ–Ω–∏—Ç—å —Ç—Ä–∞–µ–∫—Ç–æ—Ä–∏—é

[color=lightgreen][b]üí° –ü–†–û–î–í–ò–ù–£–¢–´–ï –°–û–í–ï–¢–´:[/b][/color]

[color=yellow]–≠—Ñ—Ñ–µ–∫—Ç–∏–≤–Ω–æ–µ –∏—Å–ø–æ–ª—å–∑–æ–≤–∞–Ω–∏–µ –∫—Ä—é–∫–∞:[/color]
‚Ä¢ –ò—Å–ø–æ–ª—å–∑—É–π—Ç–µ –¥–ª—è –±—ã—Å—Ç—Ä—ã—Ö –ø–æ–≤–æ—Ä–æ—Ç–æ–≤
‚Ä¢ –¶–µ–ø–ª—è–π—Ç–µ—Å—å –∑–∞ –∞—Å—Ç–µ—Ä–æ–∏–¥—ã –¥–ª—è –º–∞–Ω–µ–≤—Ä–∏—Ä–æ–≤–∞–Ω–∏—è
‚Ä¢ –ö—Ä—é–∫ –ø–æ–º–æ–≥–∞–µ—Ç —ç–∫–æ–Ω–æ–º–∏—Ç—å —Ç–æ–ø–ª–∏–≤–æ
‚Ä¢ –ú–æ–∂–µ—Ç–µ —Ü–µ–ø–ª—è—Ç—å—Å—è –∑–∞ –¥–≤–∏–∂—É—â–∏—Ö—Å—è –≤—Ä–∞–≥–æ–≤

[color=yellow]–£–ø—Ä–∞–≤–ª–µ–Ω–∏–µ —Ç–æ–ø–ª–∏–≤–æ–º:[/color]
‚Ä¢ –ü–ª–∞–Ω–∏—Ä—É–π—Ç–µ –º–∞—Ä—à—Ä—É—Ç—ã –∫ —Ç–æ–ø–ª–∏–≤–Ω—ã–º –∞—Å—Ç–µ—Ä–æ–∏–¥–∞–º
‚Ä¢ –ù–µ —Ç—Ä–∞—Ç—å—Ç–µ —Ç–æ–ø–ª–∏–≤–æ –ø–æ–Ω–∞–ø—Ä–∞—Å–Ω—É
‚Ä¢ –ò—Å–ø–æ–ª—å–∑—É–π—Ç–µ –∫—Ä—é–∫ –≤–º–µ—Å—Ç–æ –ø–æ—Å—Ç–æ—è–Ω–Ω–æ–≥–æ –¥–≤–∏–∂–µ–Ω–∏—è
‚Ä¢ –î–µ–ª–∞–π—Ç–µ –ø–∞—É–∑—ã –¥–ª—è –≤–æ—Å—Å—Ç–∞–Ω–æ–≤–ª–µ–Ω–∏—è

[color=yellow]–ë–æ–µ–≤–∞—è —Ç–∞–∫—Ç–∏–∫–∞:[/color]
‚Ä¢ –î–µ—Ä–∂–∏—Ç–µ –¥–∏—Å—Ç–∞–Ω—Ü–∏—é —Å –≤—Ä–∞–≥–∞–º–∏
‚Ä¢ –ò—Å–ø–æ–ª—å–∑—É–π—Ç–µ –∞—Å—Ç–µ—Ä–æ–∏–¥—ã –∫–∞–∫ —É–∫—Ä—ã—Ç–∏–µ
‚Ä¢ –°—Ç—Ä–µ–ª—è–π—Ç–µ –Ω–∞ —Ö–æ–¥—É
‚Ä¢ –ó–∞–±–∏—Ä–∞–π—Ç–µ —Ç–æ–ø–ª–∏–≤–æ —Å –æ–±–ª–æ–º–∫–æ–≤ –±—ã—Å—Ç—Ä–æ

[color=yellow]–ò—Å—Å–ª–µ–¥–æ–≤–∞–Ω–∏–µ:[/color]
‚Ä¢ –ò—â–∏—Ç–µ —Å–∫–æ–ø–ª–µ–Ω–∏—è —Ç–æ–ø–ª–∏–≤–Ω—ã—Ö –∞—Å—Ç–µ—Ä–æ–∏–¥–æ–≤
‚Ä¢ –ù–∞–±–ª—é–¥–∞–π—Ç–µ –∑–∞ –ø–∞—Ç—Ç–µ—Ä–Ω–∞–º–∏ —Å–ø–∞–≤–Ω–∞ –≤—Ä–∞–≥–æ–≤
‚Ä¢ –ó–∞–ø–æ–º–∏–Ω–∞–π—Ç–µ –±–µ–∑–æ–ø–∞—Å–Ω—ã–µ –∑–æ–Ω—ã
‚Ä¢ –ü–ª–∞–Ω–∏—Ä—É–π—Ç–µ –ø—É—Ç–∏ –æ—Ç—Ö–æ–¥–∞

[color=gold][b]–£–î–ê–ß–ò –í –ö–û–°–ú–û–°–ï, –ü–ò–õ–û–¢![/b][/color]"
autowrap_mode = 3

[node name="HSeparator2" type="HSeparator" parent="TutorialPanel/TutorialContainer"]
layout_mode = 2

[node name="CloseButton" type="Button" parent="TutorialPanel/TutorialContainer"]
layout_mode = 2
text = "–ó–ê–ö–†–´–¢–¨" 